Fase 4/implementacion/patron_visitor/c_ast_descendente/ConstructorAST.java
/* Generated By:JavaCC: Do not edit this line. ConstructorAST.java */
package c_ast_descendente;

import asint.TinyASint.Exp;
import asint.TinyASint.Exps;
import asint.TinyASint.Declaracion;
import asint.TinyASint.Declaraciones;
import asint.TinyASint.Instruccion;
import asint.TinyASint.Instrucciones;
import asint.TinyASint.Camps;
import asint.TinyASint.Camp;
import asint.TinyASint.Tipo;
import asint.TinyASint.Bloque;
import asint.TinyASint.ParamForms;
import asint.TinyASint.ParamForm;
import asint.TinyASint.Programa;
import semops.SemOps;

public class ConstructorAST implements ConstructorASTConstants {
	private SemOps sem = new SemOps();

	final public Programa PROGRAMAp() throws ParseException {
		Programa prog;
		prog = PROGRAMA();
		jj_consume_token(0);
		{
			if (true)
				return prog;
		}
		throw new Error("Missing return statement in function");
	}

	final public Programa PROGRAMA() throws ParseException {
		Declaraciones decs;
		Instrucciones ins;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case PROC:
		case VAR:
		case TYPE:
			decs = DECLARACIONES();
			jj_consume_token(45);
			ins = INSTRUCCIONES(); {
			if (true)
				return sem.P_decs(decs, ins);
		}
			break;
		case NOT:
		case FALSE:
		case TRUE:
		case NULL:
		case IF:
		case WHILE:
		case CALL:
		case NEW:
		case DELETE:
		case READ:
		case WRITE:
		case NL:
		case litCad:
		case identificador:
		case litEnt:
		case litReal:
		case 47:
		case 53:
		case 57:
		case 60:
			ins = INSTRUCCIONES(); {
			if (true)
				return sem.P_nodecs(ins);
		}
			break;
		default:
			jj_la1[0] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaraciones DECLARACIONES() throws ParseException {
		Declaracion dec;
		Declaraciones decs;
		dec = DECLARACION();
		decs = RDECLARACIONES(sem.decs_una(dec));
		{
			if (true)
				return decs;
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaraciones RDECLARACIONES(Declaraciones decs_h) throws ParseException {
		Declaracion dec;
		Declaraciones decs;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 46:
			jj_consume_token(46);
			dec = DECLARACION();
			decs = RDECLARACIONES(sem.decs_muchas(decs_h, dec)); {
			if (true)
				return decs;
		}
			break;
		default:
			jj_la1[1] = jj_gen; {
			if (true)
				return decs_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaracion DECLARACION() throws ParseException {
		Declaracion dec;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case VAR:
			dec = DECVAR(); {
			if (true)
				return dec;
		}
			break;
		case TYPE:
			dec = DECTIPO(); {
			if (true)
				return dec;
		}
			break;
		case PROC:
			dec = DECPROC(); {
			if (true)
				return dec;
		}
			break;
		default:
			jj_la1[2] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaracion DECVAR() throws ParseException {
		Token v, iden;
		Tipo tipo;
		v = jj_consume_token(VAR);
		tipo = TIPO();
		iden = jj_consume_token(identificador);
		{
			if (true)
				return sem.decvar(tipo, sem.str(iden.image, iden.beginLine, iden.beginColumn));
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaracion DECTIPO() throws ParseException {
		Token t, iden;
		Tipo tipo;
		t = jj_consume_token(TYPE);
		tipo = TIPO();
		iden = jj_consume_token(identificador);
		{
			if (true)
				return sem.dectipo(tipo, sem.str(iden.image, iden.beginLine, iden.beginColumn));
		}
		throw new Error("Missing return statement in function");
	}

	final public Declaracion DECPROC() throws ParseException {
		Token p, iden;
		ParamForms pforms;
		Bloque bl;
		p = jj_consume_token(PROC);
		iden = jj_consume_token(identificador);
		pforms = PFORMALES();
		bl = BLOQUE();
		{
			if (true)
				return sem.decproc(sem.str(iden.image, iden.beginLine, iden.beginColumn), pforms, bl);
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForms PFORMALES() throws ParseException {
		ParamForms pforms;
		jj_consume_token(47);
		pforms = RPFORMALES();
		jj_consume_token(48);
		{
			if (true)
				return pforms;
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForms RPFORMALES() throws ParseException {
		ParamForms pforms;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INT:
		case REAL:
		case STRING:
		case BOOL:
		case RECORD:
		case ARRAY:
		case POINTER:
		case identificador:
			pforms = LISTA_PFORMALES(); {
			if (true)
				return pforms;
		}
			break;
		default:
			jj_la1[3] = jj_gen; {
			if (true)
				return sem.pformales_empty();
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForms LISTA_PFORMALES() throws ParseException {
		ParamForms pforms;
		ParamForm pform;
		pform = PFORMAL();
		pforms = RLISTA_PFORMALES(sem.pformales_uno(pform));
		{
			if (true)
				return pforms;
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForms RLISTA_PFORMALES(ParamForms pforms_h) throws ParseException {
		ParamForms pforms;
		ParamForm pform;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 49:
			jj_consume_token(49);
			pform = PFORMAL();
			pforms = RLISTA_PFORMALES(sem.pformales_muchos(pforms_h, pform)); {
			if (true)
				return pforms;
		}
			break;
		default:
			jj_la1[4] = jj_gen; {
			if (true)
				return pforms_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForm PFORMAL() throws ParseException {
		Tipo t;
		Token id;
		t = TIPO();
		{
			if (true)
				return RPFORMAL(t);
		}
		throw new Error("Missing return statement in function");
	}

	final public ParamForm RPFORMAL(Tipo t) throws ParseException {
		Token id;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 50:
			jj_consume_token(50);
			id = jj_consume_token(identificador); {
			if (true)
				return sem.pformal_ref(t, sem.str(id.image, id.beginLine, id.beginColumn));
		}
			break;
		case identificador:
			id = jj_consume_token(identificador); {
			if (true)
				return sem.pformal(t, sem.str(id.image, id.beginLine, id.beginColumn));
		}
			break;
		default:
			jj_la1[5] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Tipo TIPO() throws ParseException {
		Tipo tb, t;
		Token id, le;
		Camps l;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INT:
		case REAL:
		case STRING:
		case BOOL:
			tb = TIPO_BASICO(); {
			if (true)
				return tb;
		}
			break;
		case identificador:
			id = jj_consume_token(identificador); {
			if (true)
				return sem.tipo_id(sem.str(id.image, id.beginLine, id.beginColumn));
		}
			break;
		case ARRAY:
			jj_consume_token(ARRAY);
			jj_consume_token(51);
			le = jj_consume_token(litEnt);
			jj_consume_token(52);
			jj_consume_token(OF);
			t = TIPO(); {
			if (true)
				return sem.tipo_array(sem.str(le.image, le.beginLine, le.beginColumn), t);
		}
			break;
		case RECORD:
			jj_consume_token(RECORD);
			jj_consume_token(53);
			l = LISTA_CAMPOS();
			jj_consume_token(54); {
			if (true)
				return sem.tipo_record(l);
		}
			break;
		case POINTER:
			jj_consume_token(POINTER);
			t = TIPO(); {
			if (true)
				return sem.tipo_pointer(t);
		}
			break;
		default:
			jj_la1[6] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Tipo TIPO_BASICO() throws ParseException {
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case INT:
			jj_consume_token(INT); {
			if (true)
				return sem.int_cons();
		}
			break;
		case REAL:
			jj_consume_token(REAL); {
			if (true)
				return sem.real_cons();
		}
			break;
		case BOOL:
			jj_consume_token(BOOL); {
			if (true)
				return sem.bool_cons();
		}
			break;
		case STRING:
			jj_consume_token(STRING); {
			if (true)
				return sem.string_cons();
		}
			break;
		default:
			jj_la1[7] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Camps LISTA_CAMPOS() throws ParseException {
		Camp c;
		Camps rl;
		c = CAMPO();
		rl = RLISTA_CAMPOS(sem.campo_uno(c));
		{
			if (true)
				return rl;
		}
		throw new Error("Missing return statement in function");
	}

	final public Camps RLISTA_CAMPOS(Camps campos_h) throws ParseException {
		Camp c;
		Camps campos;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 46:
			jj_consume_token(46);
			c = CAMPO();
			campos = RLISTA_CAMPOS(sem.campos_muchos(campos_h, c)); {
			if (true)
				return campos;
		}
			break;
		default:
			jj_la1[8] = jj_gen; {
			if (true)
				return campos_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Camp CAMPO() throws ParseException {
		Tipo t;
		Token id;
		t = TIPO();
		id = jj_consume_token(identificador);
		{
			if (true)
				return sem.campo(t, sem.str(id.image, id.beginLine, id.beginColumn));
		}
		throw new Error("Missing return statement in function");
	}

	final public Instrucciones INSTRUCCIONES() throws ParseException {
		Instruccion in;
		Instrucciones ins;
		in = INSTRUCCION();
		ins = RINST(sem.insts_una(in));
		{
			if (true)
				return ins;
		}
		throw new Error("Missing return statement in function");
	}

	final public Instrucciones RINST(Instrucciones ins_h) throws ParseException {
		Instruccion in;
		Instrucciones ins;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 46:
			jj_consume_token(46);
			in = INSTRUCCION();
			ins = RINST(sem.insts_muchas(ins_h, in)); {
			if (true)
				return ins;
		}
			break;
		default:
			jj_la1[9] = jj_gen; {
			if (true)
				return ins_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Instruccion INSTRUCCION() throws ParseException {
		Exp ex, ex1, ex2;
		Instrucciones l_ins1, l_ins;
		Token id;
		Exps l_exp;
		Bloque b;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
		case FALSE:
		case TRUE:
		case NULL:
		case litCad:
		case identificador:
		case litEnt:
		case litReal:
		case 47:
		case 57:
		case 60:
			ex1 = EXPRESION();
			jj_consume_token(55);
			ex2 = EXPRESION(); {
			if (true)
				return sem.asig(ex1, ex2);
		}
			break;
		case IF:
			jj_consume_token(IF);
			ex = EXPRESION();
			jj_consume_token(THEN);
			l_ins = LISTA_INST_OP(); {
			if (true)
				return RIf(ex, l_ins);
		}
			break;
		case WHILE:
			jj_consume_token(WHILE);
			ex = EXPRESION();
			jj_consume_token(DO);
			l_ins = LISTA_INST_OP();
			jj_consume_token(ENDWHILE); {
			if (true)
				return sem.while_inst(ex, l_ins);
		}
			break;
		case READ:
			jj_consume_token(READ);
			ex = EXPRESION(); {
			if (true)
				return sem.read(ex);
		}
			break;
		case WRITE:
			jj_consume_token(WRITE);
			ex = EXPRESION(); {
			if (true)
				return sem.write(ex);
		}
			break;
		case NL:
			jj_consume_token(NL); {
			if (true)
				return sem.nl();
		}
			break;
		case NEW:
			jj_consume_token(NEW);
			ex = EXPRESION(); {
			if (true)
				return sem.new_cons(ex);
		}
			break;
		case DELETE:
			jj_consume_token(DELETE);
			ex = EXPRESION(); {
			if (true)
				return sem.delete(ex);
		}
			break;
		case CALL:
			jj_consume_token(CALL);
			id = jj_consume_token(identificador);
			jj_consume_token(47);
			l_exp = LISTA_EXPR_OP();
			jj_consume_token(48); {
			if (true)
				return sem.call(sem.str(id.image, id.beginLine, id.beginColumn), l_exp);
		}
			break;
		case 53:
			b = BLOQUE(); {
			if (true)
				return sem.bloque_inst(b);
		}
			break;
		default:
			jj_la1[10] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Instruccion RIf(Exp ex, Instrucciones l_ins) throws ParseException {
		Instrucciones l_ins1;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case ENDIF:
			jj_consume_token(ENDIF); {
			if (true)
				return sem.if_inst(ex, l_ins);
		}
			break;
		case ELSE:
			jj_consume_token(ELSE);
			l_ins1 = LISTA_INST();
			jj_consume_token(ENDIF); {
			if (true)
				return sem.if_else(ex, l_ins, l_ins1);
		}
			break;
		default:
			jj_la1[11] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		throw new Error("Missing return statement in function");
	}

	final public Instrucciones LISTA_INST_OP() throws ParseException {
		Instrucciones l;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
		case FALSE:
		case TRUE:
		case NULL:
		case IF:
		case WHILE:
		case CALL:
		case NEW:
		case DELETE:
		case READ:
		case WRITE:
		case NL:
		case litCad:
		case identificador:
		case litEnt:
		case litReal:
		case 47:
		case 53:
		case 57:
		case 60:
			l = LISTA_INST(); {
			if (true)
				return l;
		}
			break;
		default:
			jj_la1[12] = jj_gen; {
			if (true)
				return sem.lista_inst_empty();
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Instrucciones LISTA_INST() throws ParseException {
		Instruccion in;
		Instrucciones ins;
		in = INSTRUCCION();
		ins = RLISTA_INST(sem.insts_una(in));
		{
			if (true)
				return ins;
		}
		throw new Error("Missing return statement in function");
	}

	final public Instrucciones RLISTA_INST(Instrucciones ins_h) throws ParseException {
		Instruccion in;
		Instrucciones ins;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 46:
			jj_consume_token(46);
			in = INSTRUCCION();
			ins = RLISTA_INST(sem.insts_muchas(ins_h, in)); {
			if (true)
				return ins;
		}
			break;
		default:
			jj_la1[13] = jj_gen; {
			if (true)
				return ins_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Exps LISTA_EXPR_OP() throws ParseException {
		Exps exs;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
		case FALSE:
		case TRUE:
		case NULL:
		case litCad:
		case identificador:
		case litEnt:
		case litReal:
		case 47:
		case 57:
		case 60:
			exs = LISTA_EXPR(); {
			if (true)
				return exs;
		}
			break;
		default:
			jj_la1[14] = jj_gen; {
			if (true)
				return sem.lista_exp_empty();
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Exps LISTA_EXPR() throws ParseException {
		Exp ex;
		Exps exs;
		ex = EXPRESION();
		exs = RLISTA_EXPR(sem.exp_una(ex));
		{
			if (true)
				return exs;
		}
		throw new Error("Missing return statement in function");
	}

	final public Exps RLISTA_EXPR(Exps exps_h) throws ParseException {
		Exp exp;
		Exps exps;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case 49:
			jj_consume_token(49);
			exp = EXPRESION();
			exps = RLISTA_EXPR(sem.exp_muchas(exps_h, exp)); {
			if (true)
				return exps;
		}
			break;
		default:
			jj_la1[15] = jj_gen; {
			if (true)
				return exps_h;
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Bloque BLOQUE() throws ParseException {
		Bloque p;
		jj_consume_token(53);
		p = RBLOQUE();
		jj_consume_token(54);
		{
			if (true)
				return p;
		}
		throw new Error("Missing return statement in function");
	}

	final public Bloque RBLOQUE() throws ParseException {
		Programa p;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
		case FALSE:
		case TRUE:
		case NULL:
		case PROC:
		case IF:
		case WHILE:
		case CALL:
		case NEW:
		case DELETE:
		case READ:
		case WRITE:
		case NL:
		case VAR:
		case TYPE:
		case litCad:
		case identificador:
		case litEnt:
		case litReal:
		case 47:
		case 53:
		case 57:
		case 60:
			p = PROGRAMA(); {
			if (true)
				return sem.bloque_prog(p);
		}
			break;
		default:
			jj_la1[16] = jj_gen; {
			if (true)
				return sem.no_bloque();
		}
		}
		throw new Error("Missing return statement in function");
	}

	final public Exp EXPRESION() throws ParseException {
		Exp ex;
		ex = E0();
		{
			if (true)
				return ex;
		}
		throw new Error("Missing return statement in function");
	}
